--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# testing files # 
+# testing files #
 
-test_structures.py
-test_kmers.py
-test_warmup.py
+a1/comp3506-7505-a1-v3/test_structures.py
+a1/comp3506-7505-a1-v3/test_kmers.py
+a1/comp3506-7505-a1-v3/test_warmup.py
+
